--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -463,14 +463,14 @@ footer.sticky-bottom {
 
 // Publications
 
-.publications {
+.research {
   margin-top: 2rem;
   h1 {
     color: var(--global-theme-color);
     font-size: 2rem;
     text-align: center;
-    margin-top: 1em;
-    margin-bottom: 1em;
+    margin-top: .5em;
+    margin-bottom: .5em;
   }
   h2 {
     margin-bottom: 1rem;
@@ -481,9 +481,9 @@ footer.sticky-bottom {
   h2.bibliography {
     color: $grey-color-light;
     border-top: 1px solid $grey-color-light;
-    padding-top: 1rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    padding-top: .1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     text-align: right;
   }
   h2.year {
